Update setup script for PostgreSQL
- Unified steps for Linux systems
- Added environment checks
- Added usage specifications in README.md
- Adjusted YML file to use environment variables

--- a/postgresql/fineract-db/docker/postgresql.env
+++ b/postgresql/fineract-db/docker/postgresql.env
@@ -17,7 +17,11 @@
 # under the License.
 #
 
+TAG=latest
+SERVER_URL=http://localhost:8080
+FINERACT_PORT=8080
 POSTGRES_USER=root
+PG_PASSWORD=password
 POSTGRES_PASSWORD=skdcnwauicn2ucnaecasdsajdnizucawencascdca
 FINERACT_DB_USER=postgres
 FINERACT_DB_PASS=skdcnwauicn2ucnaecasdsajdnizucawencascdca
