--- a/postgresql/docker-compose.yml
+++ b/postgresql/docker-compose.yml
@@ -5,8 +5,8 @@ services:
     image: openmf/web-app:dev
     restart: always
     environment:
-      - FINERACT_API_URLS=http://localhost:8080
-      - FINERACT_API_URL=http://localhost:8080
+      - FINERACT_API_URLS=${SERVER_URL}
+      - FINERACT_API_URL=${SERVER_URL}
       - FINERACT_API_PROVIDER=/fineract-provider/api
       - FINERACT_API_VERSION=/v1
       - FINERACT_PLATFORM_TENANT_IDENTIFIER=default
@@ -20,10 +20,12 @@ services:
   postgresql:
     image: postgres:17.5
     volumes:
-      - ./fineract-db/docker/01-init.sh:/docker-entrypoint-initdb.d/01-init.sh:Z,ro
+      #- ./fineract-server/data/01-init.sh:/docker-entrypoint-initdb.d/01-init.sh:Z,ro
+      - ./01-init.sh:/docker-entrypoint-initdb.d/01-init.sh:Z,ro
     restart: always
     env_file:
-      - ./fineract-db/docker/postgresql.env
+      #- ./fineract-db/docker/postgresql.env
+      - ./.env
     healthcheck:
       test: [ "CMD", "pg_isready", "-q", "-d", "postgres", "-U", "root" ]
       timeout: 10s
@@ -32,7 +34,7 @@ services:
       - "5432:5432"
   # Backend service
   fineract-server:
-    image: openmf/fineract:develop
+    image: openmf/fineract:${TAG}
     volumes:
       - ./fineract-server/data:/data
     healthcheck:
@@ -40,7 +42,7 @@ services:
       timeout: 10s
       retries: 10
     ports:
-      - 8080:8080
+      - ${FINERACT_PORT}:${FINERACT_PORT}
     depends_on:
       postgresql:
         condition: service_healthy
@@ -51,7 +53,7 @@ services:
       - FINERACT_HIKARI_DRIVER_SOURCE_CLASS_NAME=org.postgresql.Driver
       - FINERACT_HIKARI_JDBC_URL=jdbc:postgresql://postgresql:5432/fineract_tenants
       - FINERACT_HIKARI_USERNAME=postgres
-      - FINERACT_HIKARI_PASSWORD=skdcnwauicn2ucnaecasdsajdnizucawencascdca
+      - FINERACT_HIKARI_PASSWORD=${FINERACT_DB_PASS}
       # ... following variables are optional; "application.properties" contains reasonable defaults (same as here)
       - FINERACT_HIKARI_MINIMUM_IDLE=3
       - FINERACT_HIKARI_MAXIMUM_POOL_SIZE=10
@@ -75,12 +77,12 @@ services:
       - FINERACT_DEFAULT_TENANTDB_HOSTNAME=postgresql
       - FINERACT_DEFAULT_TENANTDB_PORT=5432
       - FINERACT_DEFAULT_TENANTDB_UID=postgres
-      - FINERACT_DEFAULT_TENANTDB_PWD=skdcnwauicn2ucnaecasdsajdnizucawencascdca
+      - FINERACT_DEFAULT_TENANTDB_PWD=${PG_PASSWORD}
       - FINERACT_DEFAULT_TENANTDB_CONN_PARAMS=
       - FINERACT_DEFAULT_TENANTDB_TIMEZONE=Asia/Kolkata
       - FINERACT_DEFAULT_TENANTDB_IDENTIFIER=default
       - FINERACT_DEFAULT_TENANTDB_NAME=fineract_default
       - FINERACT_DEFAULT_TENANTDB_DESCRIPTION=Default Demo Tenant
       - FINERACT_SERVER_SSL_ENABLED=false
-      - FINERACT_SERVER_PORT=8080
+      - FINERACT_SERVER_PORT=${FINERACT_PORT}
       - FINERACT_LOGGING_LEVEL=INFO
