--- a/postgresql/fineract-db/docker/postgresql.env
+++ b/postgresql/fineract-db/docker/postgresql.env
@@ -20,9 +20,11 @@
 TAG=latest
 SERVER_URL=http://localhost:8080
 FINERACT_PORT=8080
+WEB_APP_URL=http://localhost:80
+WEB_APP_PORT=80
 POSTGRES_USER=root
 PG_PASSWORD=your_secure_password_here
-POSTGRES_PASSWORD=your_secure_password_here
+POSTGRES_PASSWORD=superuser_secure_password_here
 FINERACT_DB_USER=postgres
 FINERACT_DB_PASS=your_secure_password_here
 FINERACT_TENANTS_DB_NAME=fineract_tenants
