--- a/mariadb/docker-compose.yml
+++ b/mariadb/docker-compose.yml
@@ -15,7 +15,7 @@ services:
       - MIFOS_PRELOAD_CLIENTS=true
       - MIFOS_DEFAULT_CHAR_DELIMITER=,
     ports:
-      - 80:80
+      - ${WEB_APP_PORT:-80}:${WEB_APP_PORT:-80}
   # Database service
   fineractmysql:
     image: mariadb:11.8.2
@@ -33,7 +33,7 @@ services:
     environment:
       MYSQL_ROOT_PASSWORD: ${MYSQL_ROOT_PASSWORD}
     healthcheck:
-      test: ["CMD", "mysqladmin" ,"ping", "-h", "localhost", "--password=${MYSQL_ROOT_PASSWORD}" ]
+      test: ["CMD", "mariadb-admin", "ping", "-h", "localhost", "-p${MYSQL_ROOT_PASSWORD}"]
       timeout: 10s
       retries: 10
   # Backend service
@@ -46,7 +46,7 @@ services:
       timeout: 10s
       retries: 10
     ports:
-      - ${FINERACT_PORT:-8080}:8080
+      - ${FINERACT_PORT:-8080}:${FINERACT_PORT:-8080}
     depends_on:
       fineractmysql:
         condition: service_healthy
@@ -88,5 +88,5 @@ services:
       - FINERACT_DEFAULT_TENANTDB_NAME=fineract_default
       - FINERACT_DEFAULT_TENANTDB_DESCRIPTION=Default Demo Tenant
       - FINERACT_SERVER_SSL_ENABLED=false
-      - FINERACT_SERVER_PORT=8080
+      - FINERACT_SERVER_PORT=${FINERACT_PORT:-8080}
       - FINERACT_LOGGING_LEVEL=INFO
