--- a/mariadb/fineract-db/docker/mariadb.env
+++ b/mariadb/fineract-db/docker/mariadb.env
@@ -1,5 +1,30 @@
+#
+# Licensed to the Apache Software Foundation (ASF) under one
+# or more contributor license agreements. See the NOTICE file
+# distributed with this work for additional information
+# regarding copyright ownership. The ASF licenses this file
+# to you under the Apache License, Version 2.0 (the
+# "License"); you may not use this file except in compliance
+# with the License. You may obtain a copy of the License at
+#
+# http://www.apache.org/licenses/LICENSE-2.0
+#
+# Unless required by applicable law or agreed to in writing,
+# software distributed under the License is distributed on an
+# "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
+# KIND, either express or implied. See the License for the
+# specific language governing permissions and limitations
+# under the License.
+#
 # MariaDB Environment Configuration
 TAG=latest
 SERVER_URL=http://localhost:8080
 FINERACT_PORT=8080
-MYSQL_ROOT_PASSWORD=password 
+WEB_APP_URL=http://localhost:80
+WEB_APP_PORT=80
+MARIADB_USER=root
+MYSQL_ROOT_PASSWORD=your_secure_password_here
+FINERACT_DB_USER=root
+FINERACT_DB_PASS=your_secure_password_here
+FINERACT_TENANTS_DB_NAME=fineract_tenants
+FINERACT_TENANT_DEFAULT_DB_NAME=fineract_default
