--- a/kubernetes/manifests/fineract-server-deployment.yaml
+++ b/kubernetes/manifests/fineract-server-deployment.yaml
@@ -20,6 +20,8 @@ spec:
     spec:
       containers:
         - env:
+            - name: JAVA_TOOL_OPTIONS
+              value: "-Xms384m -Xmx384m -XX:+UseG1GC -XX:+HeapDumpOnOutOfMemoryError"
             - name: FINERACT_DEFAULT_TENANTDB_DESCRIPTION
               value: "Default Demo Tenant"
             - name: FINERACT_DEFAULT_TENANTDB_HOSTNAME
@@ -97,7 +99,8 @@ spec:
             - name:  FINERACT_LIQUIBASE_ENABLED
               value: "false"
           #image: openmf/fineract:develop
-          image: openmf/fineract:1.11
+          #image: openmf/fineract:1.11
+          image: openmf/fineract:1.11.0
           imagePullPolicy: IfNotPresent
           livenessProbe:
             httpGet:
@@ -116,6 +119,13 @@ spec:
           ports:
             - containerPort: 8080
               protocol: TCP
+          resources:
+            requests:
+              memory: "256M"
+              cpu: "200m"
+            limits:
+              memory: "600M"
+              cpu: "500m"
           volumeMounts:
             - mountPath: /data
               name: fineract-server-claim0
