--- a/kubernetes/manifests/fineract-server-deployment.yaml
+++ b/kubernetes/manifests/fineract-server-deployment.yaml
@@ -21,7 +21,7 @@ spec:
       containers:
         - env:
             - name: JAVA_TOOL_OPTIONS
-              value: "-Xms384m -Xmx384m -XX:+UseG1GC -XX:+HeapDumpOnOutOfMemoryError"
+              value: "-Xms384m -Xmx512m -XX:+UseG1GC -XX:+HeapDumpOnOutOfMemoryError"
             - name: FINERACT_DEFAULT_TENANTDB_DESCRIPTION
               value: "Default Demo Tenant"
             - name: FINERACT_DEFAULT_TENANTDB_HOSTNAME
@@ -124,7 +124,7 @@ spec:
               memory: "256M"
               cpu: "200m"
             limits:
-              memory: "600M"
+              memory: "1G"
               cpu: "500m"
           volumeMounts:
             - mountPath: /data
