mifosx mem limit now 1600Mi

--- a/kubernetes/manifests/fineract-server-deployment.yaml
+++ b/kubernetes/manifests/fineract-server-deployment.yaml
@@ -121,10 +121,10 @@ spec:
               protocol: TCP
           resources:
             requests:
-              memory: "256M"
+              memory: "256Mi"
               cpu: "200m"
             limits:
-              memory: "1G"
+              memory: "1600Mi"
               cpu: "500m"
           volumeMounts:
             - mountPath: /data
