--- a/kubernetes/mariadb/fineract-server-deployment.yml
+++ b/kubernetes/mariadb/fineract-server-deployment.yml
@@ -54,10 +54,10 @@ spec:
         app: fineract-server
         tier: backend
     spec:
-      initContainers:
-        - name: init-mydb
-          image: busybox:1.28
-          command: ['sh', '-c', 'echo -e "Checking for the availability of MYSQL server deployment"; while ! nc -z "fineractmysql" 3306; do sleep 1; printf "-"; done; echo -e " >> MYSQL server has started";']
+      #initContainers:
+      # - name: init-mydb
+      #  image: busybox:1.28
+      # command: ['sh', '-c', 'echo -e "Checking for the availability of MYSQL server deployment"; while ! nc -z "fineractmysql" 3306; do sleep 1; printf "-"; done; echo -e " >> MYSQL server has started";']
       containers:
       - name: fineract-server
         image: apache/fineract:latest
@@ -83,6 +83,10 @@ spec:
         env:
         - name: FINERACT_NODE_ID
           value: '1'
+        - name: FINERACT_SERVER_SSL_ENABLED
+          value: false
+        - name: FINERACT_SERVER_PORT
+          value: '8080'
         - name: FINERACT_HIKARI_DRIVER_CLASS_NAME
           value: org.mariadb.jdbc.Driver
         - name: FINERACT_HIKARI_JDBC_URL
