--- a/kubernetes/mariadb/fineract-server-deployment.yml
+++ b/kubernetes/mariadb/fineract-server-deployment.yml
@@ -84,7 +84,7 @@ spec:
         - name: FINERACT_NODE_ID
           value: '1'
         - name: FINERACT_SERVER_SSL_ENABLED
-          value: false
+          value: 'false'
         - name: FINERACT_SERVER_PORT
           value: '8080'
         - name: FINERACT_HIKARI_DRIVER_CLASS_NAME
