--- a/kubernetes/mariadb/fineract-server-deployment.yml
+++ b/kubernetes/mariadb/fineract-server-deployment.yml
@@ -84,9 +84,9 @@ spec:
         - name: FINERACT_NODE_ID
           value: '1'
         - name: FINERACT_SERVER_SSL_ENABLED
-          value: 'false'
+          value: 'true'
         - name: FINERACT_SERVER_PORT
-          value: '8080'
+          value: '8443'
         - name: FINERACT_HIKARI_DRIVER_CLASS_NAME
           value: org.mariadb.jdbc.Driver
         - name: FINERACT_HIKARI_JDBC_URL
