--- a/kubernetes/mariadb/mariadb-ingress.yml
+++ b/kubernetes/mariadb/mariadb-ingress.yml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Service
-meta
-  name: mysql-loadbalancer
+metadata:
+  name: fineractmysql-loadbalancer
   #namespace: mysql
 spec:
   type: LoadBalancer
