--- a/kubernetes/mariadb/mariadb-ingress.yml
+++ b/kubernetes/mariadb/mariadb-ingress.yml
@@ -1,12 +1,12 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: fineractmysql-loadbalancer
+  name: mysql
   #namespace: mysql
 spec:
-  type: LoadBalancer
+  type: ClusterIP
   selector:
-    app: fineractmysql
+    app: mysql
   ports:
     - protocol: TCP
       port: 3306
