--- a/kubernetes/mariadb/fineract-ingress.yml
+++ b/kubernetes/mariadb/fineract-ingress.yml
@@ -34,6 +34,7 @@ metadata:
     nginx.ingress.kubernetes.io/cors-allow-methods: "GET, POST, PUT, DELETE, OPTIONS"
     nginx.ingress.kubernetes.io/cors-allow-headers: "DNT,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range,Authorization"
     nginx.ingress.kubernetes.io/cors-allow-origin: "*"
+    nginx.ingress.kubernetes.io/secure-backup-verify: "false"
 
 spec:
   # Optional: Specify ingress class (required in K8s 1.18+)
