Fix CORS headers

--- a/kubernetes/mariadb/fineract-ingress.yml
+++ b/kubernetes/mariadb/fineract-ingress.yml
@@ -31,8 +31,8 @@ metadata:
     nginx.ingress.kubernetes.io/ssl-redirect: "true"
     # Optional: CORS (if needed for API access)
     nginx.ingress.kubernetes.io/enable-cors: "true"
-    nginx.ingress.kubernetes.io/cors-allow-methods: "GET, POST, PUT, DELETE, OPTIONS"
-    nginx.ingress.kubernetes.io/cors-allow-headers: "DNT,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range,Authorization"
+    nginx.ingress.kubernetes.io/cors-allow-methods: "GET, POST, PUT, DELETE, OPTIONS, PATCH"
+    nginx.ingress.kubernetes.io/cors-allow-headers: "DNT,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range,Authorization,Accept,Accept-Encoding,Accept-Language,Access-Control-Request-Headers,Access-Control-Request-Method,Origin,Priority,Referer,Sec-Fetch-Dest,Sec-Fetch-Mode,Sec-Fetch-Site"
     nginx.ingress.kubernetes.io/cors-allow-origin: "*"
     nginx.ingress.kubernetes.io/secure-backup-verify: "false"
 
