Fix CORS headers

--- a/kubernetes/mariadb/fineract-ingress.yml
+++ b/kubernetes/mariadb/fineract-ingress.yml
@@ -32,7 +32,7 @@ metadata:
     # Optional: CORS (if needed for API access)
     nginx.ingress.kubernetes.io/enable-cors: "true"
     nginx.ingress.kubernetes.io/cors-allow-methods: "GET, POST, PUT, DELETE, OPTIONS, PATCH"
-    nginx.ingress.kubernetes.io/cors-allow-headers: "DNT,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range,Authorization,Accept,Accept-Encoding,Accept-Language,Access-Control-Request-Headers,Access-Control-Request-Method,Origin,Priority,Referer,Sec-Fetch-Dest,Sec-Fetch-Mode,Sec-Fetch-Site"
+    nginx.ingress.kubernetes.io/cors-allow-headers: "fineract-platform-tenantid,sec-ch-ua,sec-ch-ua-mobile,sec-ch-ua-platform,DNT,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range,Authorization,Accept,Accept-Encoding,Accept-Language,Access-Control-Request-Headers,Access-Control-Request-Method,Origin,Priority,Referer,Sec-Fetch-Dest,Sec-Fetch-Mode,Sec-Fetch-Site"
     nginx.ingress.kubernetes.io/cors-allow-origin: "*"
     nginx.ingress.kubernetes.io/secure-backup-verify: "false"
 
