--- a/kubernetes/mariadb/fineract-ingress.yml
+++ b/kubernetes/mariadb/fineract-ingress.yml
@@ -1,3 +1,20 @@
+# Licensed to the Apache Software Foundation (ASF) under one
+# or more contributor license agreements. See the NOTICE file
+# distributed with this work for additional information
+# regarding copyright ownership. The ASF licenses this file
+# to you under the Apache License, Version 2.0 (the
+# "License"); you may not use this file except in compliance
+# with the License. You may obtain a copy of the License at
+#
+# http://www.apache.org/licenses/LICENSE-2.0
+#
+# Unless required by applicable law or agreed to in writing,
+# software distributed under the License is distributed on an
+# "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
+# KIND, either express or implied. See the License for the
+# specific language governing permissions and limitations
+# under the License.
+#
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
@@ -34,7 +51,8 @@ metadata:
     nginx.ingress.kubernetes.io/cors-allow-methods: "GET, POST, PUT, DELETE, OPTIONS, PATCH"
     nginx.ingress.kubernetes.io/cors-allow-headers: "fineract-platform-tenantid,sec-ch-ua,sec-ch-ua-mobile,sec-ch-ua-platform,DNT,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range,Authorization,Accept,Accept-Encoding,Accept-Language,Access-Control-Request-Headers,Access-Control-Request-Method,Origin,Priority,Referer,Sec-Fetch-Dest,Sec-Fetch-Mode,Sec-Fetch-Site"
     nginx.ingress.kubernetes.io/cors-allow-origin: "*"
-    nginx.ingress.kubernetes.io/secure-backup-verify: "false"
+    #Disable in production
+    nginx.ingress.kubernetes.io/secure-backup-verify: "false" 
 
 spec:
   # Optional: Specify ingress class (required in K8s 1.18+)
