Fix Postgresql deployment

--- a/kubernetes/postgresql/fineract-mifoscommunity-deployment.yml
+++ b/kubernetes/postgresql/fineract-mifoscommunity-deployment.yml
@@ -54,10 +54,10 @@ spec:
         app: mifos-webapp
         tier: frontend
     spec:
-      initContainers:
-        - name: init-myservice
-          image: busybox:1.28
-          command: ['sh', '-c', 'echo -e "Checking for the availability of Fineract server deployment"; while ! nc -z "fineract-server" 8443; do sleep 1; printf "-"; done; echo -e " >> Fineract server has started";']
+      #initContainers:
+       # - name: init-myservice
+        #  image: busybox:1.28
+         # command: ['sh', '-c', 'echo -e "Checking for the availability of Fineract server deployment"; while ! nc -z "fineract-server" 8443; do sleep 1; printf "-"; done; echo -e " >> Fineract server has started";']
       containers:
       - name: mifos-webapp
         image: openmf/web-app:dev
@@ -68,29 +68,39 @@ spec:
           requests:
             cpu: "200m"
             memory: "0.5Gi"
-        livenessProbe:
-          httpGet:
-            path: /
-            port: 80
-          initialDelaySeconds: 90
-          periodSeconds: 1
-        readinessProbe:
-          httpGet:
-            path: /
-            port: 80
-          initialDelaySeconds: 90
-          periodSeconds: 1
+        #livenessProbe:
+        #  httpGet:
+        #    path: /
+        #    port: 80
+        #  initialDelaySeconds: 90
+        #  periodSeconds: 1
+        #readinessProbe:
+        #  httpGet:
+        #    path: /
+        #    port: 80
+        #  initialDelaySeconds: 90
+        #  periodSeconds: 1
         env:
-        - name: FINERACT_PLATFORM_TENANT_IDENTIFIER 
-          value: default 
+        - name: TZ
+          value: America/Mexico_City
+        - name: FINERACT_API_URLS
+          value: https://fineract.mifos.local
+        - name: FINERACT_API_URL
+          value: https://fineract.mifos.local
         - name: FINERACT_API_PROVIDER
           value: /fineract-provider/api
-        - name: FINERACT_API_VERSION 
-          value: /v1 
+        - name: FINERACT_API_VERSION
+          value: /v1
+        - name: FINERACT_PLATFORM_TENANT_IDENTIFIER
+          value: default
         - name: MIFOS_DEFAULT_LANGUAGE
-          value: en-US 
-        - name: FINERACT_API_URL
-          value: https://fineract-server:8443 
+          value: en-US
+        - name: MIFOS_SUPPORTED_LANGUAGES
+          value: cs-CS,de-DE,en-US,es-MX,fr-FR,it-IT,ko-KO,li-LI,lv-LV,ne-NE,pt-PT,sw-SW
+        - name: MIFOS_PRELOAD_CLIENTS
+          value: "true"
+        - name: MIFOS_DEFAULT_CHAR_DELIMITER
+          value: ","        
         ports:
         - containerPort: 80
           name: mifos-webapp
