--- a/kubernetes/postgresql/fineract-server-deployment.yml
+++ b/kubernetes/postgresql/fineract-server-deployment.yml
@@ -26,8 +26,8 @@ metadata:
 spec:
   ports:
   - protocol: TCP
-    port: 8443
-    targetPort: 8443
+    port: 8080
+    targetPort: 8080
   selector:
     app: fineract-server
     tier: backend
@@ -54,10 +54,10 @@ spec:
         app: fineract-server
         tier: backend
     spec:
-      initContainers:
-        - name: init-mydb
-          image: busybox:1.28
-          command: ['sh', '-c', 'echo -e "Checking for the availability of POSTGRESQL server deployment"; while ! nc -z "fineractpostgresql" 5432; do sleep 1; printf "-"; done; echo -e " >> POSTGRESQL server has started";']
+      #initContainers:
+      # - name: init-mydb
+      #  image: busybox:1.28
+      # command: ['sh', '-c', 'echo -e "Checking for the availability of MYSQL server deployment"; while ! nc -z "fineractpostgresql" 3306; do sleep 1; printf "-"; done; echo -e " >> MYSQL server has started";']
       containers:
       - name: fineract-server
         image: apache/fineract:latest
@@ -68,25 +68,29 @@ spec:
           requests:
             cpu: "200m"
             memory: "0.5Gi"
-        livenessProbe:
-          httpGet:
-            path: /fineract-provider/actuator/health/liveness
-            port: 8080
-          initialDelaySeconds: 180
-          periodSeconds: 1
-        readinessProbe:
-          httpGet:
-            path: /fineract-provider/actuator/health/readiness
-            port: 8080
-          initialDelaySeconds: 180
-          periodSeconds: 1
+        #livenessProbe:
+        #  httpGet:
+        #    path: /fineract-provider/actuator/health/liveness
+        #    port: 8080
+        #  initialDelaySeconds: 180
+        #  periodSeconds: 1
+        #readinessProbe:
+        #  httpGet:
+        #    path: /fineract-provider/actuator/health/readiness
+        #    port: 8080
+        #  initialDelaySeconds: 180
+        #  periodSeconds: 1
         env:
         - name: FINERACT_NODE_ID
           value: '1'
+        - name: FINERACT_SERVER_SSL_ENABLED
+          value: 'false'
+        - name: FINERACT_SERVER_PORT
+          value: '8080'
         - name: FINERACT_HIKARI_DRIVER_CLASS_NAME
           value: org.postgresql.Driver
         - name: FINERACT_HIKARI_JDBC_URL
-          value: jdbc:postgresql://fineractpostgresql:5432/fineract_tenants 
+          value: jdbc:postgresql://fineractpostgresql:5432/fineract_tenants         
         - name: FINERACT_HIKARI_USERNAME
           valueFrom:
             secretKeyRef:
@@ -100,7 +104,7 @@ spec:
         - name: FINERACT_DEFAULT_TENANTDB_HOSTNAME
           value: fineractpostgresql
         - name: FINERACT_DEFAULT_TENANTDB_PORT
-          value: '5432'
+          value: '3306'
         - name: FINERACT_DEFAULT_TENANTDB_UID
           valueFrom:
             secretKeyRef:
