--- a/kubernetes/postgresql/fineract-server-deployment.yml
+++ b/kubernetes/postgresql/fineract-server-deployment.yml
@@ -57,7 +57,7 @@ spec:
       #initContainers:
       # - name: init-mydb
       #  image: busybox:1.28
-      # command: ['sh', '-c', 'echo -e "Checking for the availability of MYSQL server deployment"; while ! nc -z "fineractdb" 3306; do sleep 1; printf "-"; done; echo -e " >> MYSQL server has started";']
+      # command: ['sh', '-c', 'echo -e "Checking for the availability of Postgres server deployment"; while ! nc -z "fineractdb" 3306; do sleep 1; printf "-"; done; echo -e " >> Postgres server has started";']
       containers:
       - name: fineract-server
         image: apache/fineract:latest
