--- a/postgresql/docker-compose.yml
+++ b/postgresql/docker-compose.yml
@@ -5,8 +5,8 @@ services:
     image: openmf/web-app:dev
     restart: always
     environment:
-      - FINERACT_API_URLS=${SERVER_URL:-http://localhost:8080}
-      - FINERACT_API_URL=${SERVER_URL:-http://localhost:8080}
+      - FINERACT_API_URLS=${SERVER_URL:-http://localhost:3000}
+      - FINERACT_API_URL=${SERVER_URL:-http://localhost:3000}
       - FINERACT_API_PROVIDER=/fineract-provider/api
       - FINERACT_API_VERSION=/v1
       - FINERACT_PLATFORM_TENANT_IDENTIFIER=default
@@ -15,7 +15,7 @@ services:
       - MIFOS_PRELOAD_CLIENTS=true
       - MIFOS_DEFAULT_CHAR_DELIMITER=,
     ports:
-      - ${WEB_APP_PORT:-80}:${WEB_APP_PORT:-80}
+      - ${WEB_APP_PORT:-80}:80
   # Database service
   postgresql:
     image: postgres:17.5
@@ -38,11 +38,11 @@ services:
     volumes:
       - ./fineract-server/data:/data
     healthcheck:
-      test: ["CMD", 'sh', '-c', 'echo -e "Checking for the availability of Fineract server deployment"; while ! nc -z "fineract-server" 8443; do sleep 1; printf "-"; done; echo -e " >> Fineract server has started";' ]
+      test: ["CMD", 'sh', '-c', 'echo -e "Checking for the availability of Fineract server deployment"; while ! nc -z "fineract-server" ${FINERACT_PORT:-3000}; do sleep 1; printf "-"; done; echo -e " >> Fineract server has started";' ]
       timeout: 10s
       retries: 10
     ports:
-      - ${FINERACT_PORT}:${FINERACT_PORT}
+      - ${FINERACT_PORT:-3000}:8080
     depends_on:
       postgresql:
         condition: service_healthy
@@ -84,5 +84,5 @@ services:
       - FINERACT_DEFAULT_TENANTDB_NAME=fineract_default
       - FINERACT_DEFAULT_TENANTDB_DESCRIPTION=Default Demo Tenant
       - FINERACT_SERVER_SSL_ENABLED=false
-      - FINERACT_SERVER_PORT=${FINERACT_PORT:-8080}
+      - FINERACT_SERVER_PORT=8080
       - FINERACT_LOGGING_LEVEL=INFO
