from webapp make url https://mifos.mifos.gazelle.test, remove extra FINERACT_API_URLS entry

--- a/kubernetes/manifests/web-app-deployment.yaml
+++ b/kubernetes/manifests/web-app-deployment.yaml
@@ -21,9 +21,7 @@ spec:
             - name: FINERACT_API_PROVIDER
               value: /fineract-provider/api
             - name: FINERACT_API_URL
-              value: http://mifos.mifos.gazelle.test
-            - name: FINERACT_API_URLS
-              value: http://mifos.mifos.gazelle.test
+              value: https://mifos.mifos.gazelle.test
             - name: FINERACT_API_VERSION
               value: /v1
             - name: FINERACT_PLATFORM_TENANTS_IDENTIFIER
