feat: implement scalable manager-worker architecture and update install script

--- a/mariadb/.env
+++ b/mariadb/.env
@@ -28,3 +28,16 @@ FINERACT_DB_USER=root
 FINERACT_DB_PASS=your_secure_password_here
 FINERACT_TENANTS_DB_NAME=fineract_tenants
 FINERACT_TENANT_DEFAULT_DB_NAME=fineract_default
+
+# Scalable Manager-Worker Configuration
+# Modes: WRITE for Manager node, READ for Worker nodes
+FINERACT_MANAGER_MODE=WRITE
+FINERACT_WORKER_MODE=READ
+# Number of Worker nodes to deploy (Default is 0, modified by install.sh)
+FINERACT_WORKERS_COUNT=0
+
+# Messaging & External Services
+# Required for Communication between Manager and Workers
+FINERACT_MESSAGING_ACTIVEMQ_BROKER_URL=tcp://activemq:61616
+# Enable BIRT Report Engine by default
+FINERACT_REPORT_ENGINE_BIRT_ENABLED=true
