--- a/postgresql/docker-compose.yml
+++ b/postgresql/docker-compose.yml
@@ -32,6 +32,13 @@ services:
       retries: 10
     ports:
       - "5432:5432"
+  # Messaging service for Manager-Worker communication
+  activemq:
+    image: apache/activemq-classic:latest
+    container_name: fineract-activemq
+    restart: always
+    healthcheck:
+      test: ["CMD", "nc", "-z", "localhost", "61616"]    
   # Backend service
   fineract-server:
     image: openmf/fineract:${TAG}
@@ -46,6 +53,8 @@ services:
     depends_on:
       postgresql:
         condition: service_healthy
+      activemq:
+        condition: service_healthy  
     environment:
       # NOTE: node aware scheduler
       - FINERACT_NODE_ID=1
@@ -86,3 +95,22 @@ services:
       - FINERACT_SERVER_SSL_ENABLED=false
       - FINERACT_SERVER_PORT=8080
       - FINERACT_LOGGING_LEVEL=INFO
+      - FINERACT_MODE=${FINERACT_MANAGER_MODE:-WRITE}
+      - FINERACT_MESSAGING_ACTIVEMQ_BROKER_URL=${FINERACT_MESSAGING_ACTIVEMQ_BROKER_URL}
+      - FINERACT_REPORT_ENGINE_BIRT_ENABLED=${FINERACT_REPORT_ENGINE_BIRT_ENABLED}
+  # Scalable Worker service (Read-only nodes)
+  fineract-worker:
+    image: openmf/fineract:${TAG}
+    depends_on:
+      fineract-server:
+        condition: service_healthy
+    deploy:
+      mode: replicated
+      replicas: ${FINERACT_WORKERS_COUNT:-0}
+    environment:
+      - FINERACT_MODE=${FINERACT_WORKER_MODE:-READ}
+      - FINERACT_HIKARI_DRIVER_SOURCE_CLASS_NAME=org.postgresql.Driver
+      - FINERACT_HIKARI_JDBC_URL=jdbc:postgresql://postgresql:5432/fineract_tenants
+      - FINERACT_HIKARI_USERNAME=postgres
+      - FINERACT_HIKARI_PASSWORD=${FINERACT_DB_PASS}
+      - FINERACT_MESSAGING_ACTIVEMQ_BROKER_URL=${FINERACT_MESSAGING_ACTIVEMQ_BROKER_URL}
